Implement L1 Accounts API
