# api/config/routes.rb
@@ -11,6 +11,10 @@ Rails.application.routes.draw do
     scope module: :api, defaults: { format: :json } do
       scope path: "v1" do
         namespace :helium do
+          namespace :l1 do
+            resources :accounts, only: [ :index ]
+          end
+
           namespace :l2 do
             resources :iot_reward_shares, only: [ :index ], path: "iot-reward-shares" do
               collection do
